# Networking-Pico-Ws

./: README.md  UDP_cfg.h
ADPC_side/: ADPC_transmitter.c  CMakeLists.txt  capstone_adc.c  connect.h
Computer_side/: CMakeLists.txt  Computer_receiver.c  capstone_adc.h
Computer_side/dhcpserver/: dhcpserver.c  dhcpserver.h
